# e3dc-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  e3dc-cli.py  mkdocs.yml  pyproject.toml  requirements.txt  setup-venv.sh
.github/workflows/: python-pdm.yml
docs/: index.md
lib/: argparse.py  connection.py  query.py  setter.py
src/e3dc_cli/: __main__.py  argparse.py  connection.py  output.py  query.py  setter.py
test/: run_all_queries.sh
tests/: test_general.py  test_queries.py  test_setter.py  util_runner.py
