[project]
name = "e3dc-cli"
dynamic = ["version"]
description = "Command-line tool to query E3/DC systems"
authors = [{ name = "Sebastian Waldvogel", email = "sebastian@waldvogels.de" }]
license = { text = "MIT" }
readme = "README.md"

requires-python = ">=3.8"
dependencies = [
    "pye3dc==0.9.2",
    "tzlocal==5.2",
    "jsonargparse==4.35.0",
    "rich-argparse==1.6.0",
    "pydantic==2.10.1",
]

[project.scripts]
e3dc-cli = "e3dc_cli.__main__:cli"

[tool.pdm.version]
source = "scm"

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

